tests/interpreter/binary-expression-greater-equal-bad-types.stderr
error: cannot compare 'Number' with 'String'
 --> $DIR/binary-expression-greater-equal-bad-types.lox:1:1
  |
1 | 10 >= "foo";
  | ^^^^^^^^^^^
